--- a/gripper3f_control/package.xml
+++ b/gripper3f_control/package.xml
@@ -50,8 +50,13 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>robotiq_s_model_control</build_depend>
+  <build_depend>robotiq_joint_state_publisher</build_depend>
+  <build_depend>robotiq_s_model_visualization</build_depend>
   <build_export_depend>roscpp</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
+  <exec_depend>robotiq_s_model_control</exec_depend>
+  <exec_depend>robotiq_joint_state_publisher</exec_depend>
+  <exec_depend>robotiq_s_model_visualization</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
