--- a/grippers_bringup/package.xml
+++ b/grippers_bringup/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>vacuum_control</name>
+  <name>grippers_bringup</name>
   <version>0.0.0</version>
-  <description>The vacuum_control package</description>
+  <description>The grippers_bringup package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/vacuum_control</url> -->
+  <!-- <url type="website">http://wiki.ros.org/grippers_bringup</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,17 +49,8 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>motoman_driver</build_depend>
-  <build_depend>motoman_msgs</build_depend>
-  <build_depend>motoman_variables</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_export_depend>motoman_driver</build_export_depend>
-  <build_export_depend>motoman_msgs</build_export_depend>
-  <build_export_depend>motoman_variables</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
-  <exec_depend>motoman_driver</exec_depend>
-  <exec_depend>motoman_msgs</exec_depend>
-  <exec_depend>motoman_variables</exec_depend>
   <exec_depend>roscpp</exec_depend>
 
 
